<resources>
    <string name="app_name">声入人心</string>

    <string name="fun_1">首页</string>
    <string name="fun_2">翻译</string>
    <string name="fun_3">用户</string>

    <string name="name_1">孔德彬</string>
    <string name="name_2">董善宇</string>
    <string name="name_3">谢卓君</string>
    <string name="name_4">陈明航</string>
    <string name="name_5">李捷</string>

    <string name="Introduction">中华文化博大精深 而方言也正是其中的重要组成部分</string>

    <string name="input">Voice input</string>
    <string name="beginInput">Tyoe something here</string>
    <string name="Dialect">方言选择</string>
    <string name="translateText">Translate text</string>

    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">login</string>

    <string name="p1">海南</string>
    <string name="p2">河南</string>
    <string name="p3">贵州</string>
    <string name="p4">甘肃</string>
    <string name="p5">广西</string>
    <string name="p6">湖北</string>
    <string name="p7">青海</string>
    <string name="p8">陕西</string>
    <string name="p9">浙江</string>
    <string name="p10">云南</string>
    <string name="p11">台湾</string>
    <string name="p12">西藏</string>
    <string name="p13">广东</string>
    <string name="p14">重庆</string>
    <string name="p15">福建</string>
    <string name="p16">四川</string>
    <string name="p17">山东</string>
    <string name="p18">内蒙</string>
    <string name="p19">黑龙江</string>
    <string name="p20">吉林</string>
    <string name="p21">辽宁</string>
    <string name="p22">香港</string>
    <string name="p23">宁夏</string>
    <string name="p24">湖南</string>
    <string name="p25">江西</string>
    <string name="p26">江苏</string>
    <string name="p27">新疆</string>
    <string name="p28">北京</string>
    <string name="p29">天津</string>
    <string name="p30">山西</string>
    <string name="p31">河北</string>
    <string name="p32">中国</string>


</resources>
