<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".More">

    <GridLayout
        android:id="@+id/gridlayout"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:rowCount="8"
        android:columnCount="4">
        <Button
            android:background="@color/white"
            android:text="@string/p1"
            android:padding="5dp"
            android:drawableTop="@mipmap/hai_nan"/>
        <Button
            android:background="@color/white"
            android:text="@string/p2"
            android:padding="5dp"
            android:drawableTop="@mipmap/he_nan"/>
        <Button
            android:background="@color/white"
            android:text="@string/p3"
            android:drawableTop="@mipmap/gui_zhou"
            android:padding="5dp"/>
        <Button
            android:background="@color/white"
            android:text="@string/p4"
            android:drawableTop="@mipmap/gan_su"
            android:padding="5dp"/>
        <Button
            android:background="@color/white"
            android:text="@string/p5"
            android:drawableTop="@mipmap/guang_xi"
            android:padding="5dp"/>
        <Button
            android:background="@color/white"
            android:text="@string/p6"
            android:drawableTop="@mipmap/hu_bei"
            android:padding="5dp"/>
        <Button
            android:background="@color/white"
            android:text="@string/p7"
            android:drawableTop="@mipmap/qing_hai"
            android:padding="5dp"/>
        <Button
            android:background="@color/white"
            android:text="@string/p8"
            android:padding="5dp"
            android:drawableTop="@mipmap/shan_x"/>
        <Button
            android:background="@color/white"
            android:text="@string/p9"
            android:padding="5dp"
            android:drawableTop="@mipmap/zhe_jiang"/>
        <Button
            android:background="@color/white"
            android:text="@string/p10"
            android:padding="5dp"
            android:drawableTop="@mipmap/yun_nan"/>
        <Button
            android:background="@color/white"
            android:text="@string/p11"
            android:padding="5dp"
            android:drawableTop="@mipmap/tai_wan"/>
        <Button
            android:background="@color/white"
            android:text="@string/p12"
            android:drawableTop="@mipmap/xi_zang"
            android:padding="5dp"/>
        <Button
            android:background="@color/white"
            android:text="@string/p13"
            android:drawableTop="@mipmap/guang_dong"
            android:padding="5dp"/>
        <Button
            android:background="@color/white"
            android:text="@string/p14"
            android:drawableTop="@mipmap/chong_qin"
            android:padding="5dp"/>
        <Button
            android:background="@color/white"
            android:text="@string/p15"
            android:drawableTop="@mipmap/hu_jian"
            android:padding="5dp"/>
        <Button
            android:background="@color/white"
            android:text="@string/p16"
            android:drawableTop="@mipmap/si_chuan"
            android:padding="5dp"/>
        <Button
            android:background="@color/white"
            android:text="@string/p17"
            android:drawableTop="@mipmap/shan_dong"
            android:padding="5dp"/>

        <Button
            android:layout_row="0"
            android:layout_column="1"
            android:background="@color/white"
            android:drawableTop="@mipmap/nei_meng_gu"
            android:padding="5dp"
            android:text="@string/p18" />

        <Button
            android:background="@color/white"
            android:text="@string/p19"
            android:drawableTop="@mipmap/hei_long_jiang"
            android:padding="5dp"/>
        <Button
            android:background="@color/white"
            android:text="@string/p20"
            android:drawableTop="@mipmap/ji_lin"
            android:padding="5dp"/>
        <Button
            android:background="@color/white"
            android:text="@string/p21"
            android:drawableTop="@mipmap/liao_ning"
            android:padding="5dp"/>
        <Button
            android:background="@color/white"
            android:text="@string/p22"
            android:padding="5dp"
            android:drawableTop="@mipmap/hong_kong"/>
        <Button
            android:background="@color/white"
            android:text="@string/p23"
            android:drawableTop="@mipmap/ning_xia"
            android:padding="5dp"/>
        <Button
            android:background="@color/white"
            android:text="@string/p24"
            android:drawableTop="@mipmap/hu_nan"
            android:padding="5dp"/>
        <Button
            android:background="@color/white"
            android:text="@string/p25"
            android:drawableTop="@mipmap/jiang_xi"
            android:padding="5dp"/>
        <Button
            android:background="@color/white"
            android:text="@string/p26"
            android:drawableTop="@mipmap/jiang_su"
            android:padding="5dp"/>
        <Button
            android:background="@color/white"
            android:text="@string/p27"
            android:drawableTop="@mipmap/xin_jiang"
            android:padding="5dp"/>
        <Button
            android:background="@color/white"
            android:text="@string/p28"
            android:drawableTop="@mipmap/bei_jing"
            android:padding="5dp"/>
        <Button
            android:background="@color/white"
            android:text="@string/p29"
            android:drawableTop="@mipmap/tian_jin"
            android:padding="5dp"/>
        <Button
            android:background="@color/white"
            android:text="@string/p30"
            android:drawableTop="@mipmap/shan_xi"
            android:padding="5dp"/>
        <Button
            android:background="@color/white"
            android:text="@string/p31"
            android:drawableTop="@mipmap/he_bei"
            android:padding="5dp"/>
        <Button
            android:background="@color/white"
            android:text="@string/p32"
            android:drawableTop="@mipmap/china"
            android:padding="5dp"/>
    </GridLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:src="@mipmap/map"
        android:padding="10dp"/>

</LinearLayout>