<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Title">

    <Button
        android:id="@+id/page"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/fun_1"
        android:textColor="@drawable/text_title"
        android:background="@drawable/button_title" />

    <Button
        android:id="@+id/translate"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/fun_2"
        android:textColor="@drawable/text_title"
        android:background="@drawable/button_title" />

    <Button
        android:id="@+id/settings"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/fun_3"
        android:textColor="@drawable/text_title"
        android:background="@drawable/button_title"
        android:paddingLeft="15dp"
        android:paddingRight="15dp" />


</LinearLayout>